--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 		<div class="unresponsive">
 			<div class="content-size"><a href="http://communityscale.io"><img src="./images/CommunityScale-logo.png" height=auto width=30px title="CommunityScale" alt="CommunityScale"></a></div>
 			<div class="fill-space">
-				<p><small><a href="http://communityscale.io">CommunityScale</a> is a pioneering urban planning and spatial data analysis company serving clients across the United States. <br> Follow CommunityScale on <a href="https://www.linkedin.com/company/communityscale">LinkedIn</a> and <a href="https://twitter.com/CommunityScale">Twitter/X</a> <br>This dashboard is <a href="https://github.com/CommunityScale/Honolulu">open source</a> MIT license - 2024 CommunityScale</small>
+				<p><small><a href="http://communityscale.io">CommunityScale</a> is a pioneering urban planning and spatial data analysis company serving clients across the United States. Follow CommunityScale on <a href="https://www.linkedin.com/company/communityscale">LinkedIn</a> and <a href="https://twitter.com/CommunityScale">Twitter/X</a>. This dashboard is <a href="https://github.com/CommunityScale/Honolulu">open source</a> MIT license - 2024 CommunityScale</small>
 				</p>
 			</div>
 		</div>
