new social card

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 	<!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
+
 	<!-- Sticky header -->
 	<div class="sticky">
 		<div class="container">
-			<small>
-				<p class="inline-text">
-					<a href="https://Honolulu.org/project/housing-planning/" target="_blank"><img src="images/Honolulu.png" alt="Honolulu" class="inline-image"></a>
-					<span class="title"><b>Honolulu Housing Study |</span></b><a href="#Overview">Overview</a> | <a href="#Indicators">Indicators</a> | <a href="#Solutions"> Solutions </a>| <a href="#Next steps">Next steps</a>
-				</p>
-			</small>
+			<p class="inline-text" style="color: #ffffff;">
+				<a href="https://Honolulu.org/project/housing-planning/" target="_blank"><img src="images/community.png" alt="Honolulu" class="inline-image"></a>
+				<span class="title"><b>Honolulu Housing Plan Map |</b></span><a href="#Overview" style="color: #ffffff;">Overview</a> | <a href="#Indicators" style="color: #ffffff;">Indicators</a> | <a href="#Solutions" style="color: #ffffff;"> Solutions </a>| <a href="#Next steps" style="color: #ffffff;">Next steps</a>
+			</p>
 		</div>
 	</div>
 
@@ -452,28 +451,25 @@
 	<div class="row">
 		<hr>
 	</div>
-	</div>
 
 	<div class="container">
 		<div class="unresponsive">
-			<div class="content-size"><a href="https://Honolulu.org/project/housing-planning/"><img src="./images/Honolulu.png" height=auto width=30px title="Honolulu" alt="Honolulu"></a></div>
+			<div class="content-size"><a href="https://Honolulu.org/project/housing-planning/"><img src="./images/community.png" height=auto width=30px title="Honolulu" alt="Honolulu"></a></div>
 			<div class="fill-space">
-				<p><small><a href="https://Honolulu.org/project/housing-planning/">Honolulu Regional Council of Governments (Honolulu)</a> is a regional service organization serving the 26 municipalities of Honolulu County, Massachusetts. <br> The Honolulu office is located on the second floor of the John W. Olver Transit Center at 12 Olive Street, Greenfield, MA. <br> Contact by phone (413) 774-3167</small>
-				</p>
+				<p class="small-text"><a href="https://Honolulu.org/project/housing-planning/">Honolulu Mayor’s Office of Housing</a> drives policy and strategy for housing islandwide. The office leads cross-sector collaboration and policy change to stimulate the acquisition, development, and preservation of housing for all of Oahu’s residents, including the creation of pathways from homelessness to housing.</p>
 			</div>
 		</div>
 
 		<div class="unresponsive">
 			<div class="content-size"><a href="http://communityscale.io"><img src="./images/CommunityScale-logo.png" height=auto width=30px title="CommunityScale" alt="CommunityScale"></a></div>
 			<div class="fill-space">
-				<p><small><a href="http://communityscale.io">CommunityScale</a> is a pioneering urban planning and spatial data analysis company serving clients across the United States. Follow CommunityScale on <a href="https://www.linkedin.com/company/communityscale">LinkedIn</a> and <a href="https://twitter.com/CommunityScale">Twitter/X</a>. This dashboard is <a href="https://github.com/CommunityScale/Honolulu">open source</a> MIT license - 2024 CommunityScale</small>
-				</p>
+				<p class="small-text"><a href="http://communityscale.io">CommunityScale</a> is a pioneering urban planning and spatial data analysis company serving clients across the United States. <br> Follow CommunityScale on <a href="https://www.linkedin.com/company/communityscale">LinkedIn</a> and <a href="https://twitter.com/CommunityScale">Twitter/X</a>. This dashboard is <a href="https://github.com/CommunityScale/Greenfield">open source</a> MIT license.</p>
 			</div>
 		</div>
 	</div>
 
 	<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
 </html>
