--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Overview" class="inline-text"><img src="images/Overview.png" class="inline-image" title="Overview">Overview</h2>
+				<h2 id="Overview" class="inline-text"><img src="images/Overview.png" class="inline-image" title="Overview">Key takeaways</h2>
 			</div>
 		</div>
 	</div>
