changed from key takeaways tried to add key takeaways to top banner

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 				<br>Comprehensive Housing Plan Dashboard
 			</h1>
 		</div>
+		<div class="unresponsive">
+			<div class="side-by-side" style="margin-top: 0%">
+				<p><b>Takeaway 1.</b></p>
+			</div>
+			<div class="side-by-side" style="margin-top: 0%">
+				<p><b>Takeaway 2.</b></p>
+			</div>
+			<div class="side-by-side" style="margin-top: 0%">
+				<p><b>Takeaway 3.</b></p>
+			</div>
+		</div>
 	</div>
 
 	<div class="container">
@@ -96,7 +107,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Overview" class="inline-text"><img src="images/Overview.png" class="inline-image" title="Overview">Key takeaways</h2>
+				<h2 id="Overview" class="inline-text"><img src="images/Overview.png" class="inline-image" title="Overview">Overview</h2>
 			</div>
 		</div>
 	</div>
