--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<br>Comprehensive Housing Plan Dashboard
 			</h1>
 		</div>
-		<div class="unresponsive">
+		<div class="nine columns">
 			<div class="side-by-side" style="margin-top: 0%">
 				<p><b>Takeaway 1.</b></p>
 			</div>
