--- a/index.html
+++ b/index.html
@@ -71,17 +71,6 @@
 				<br>Comprehensive Housing Plan Dashboard
 			</h1>
 		</div>
-		<div class="nine columns">
-			<div class="side-by-side" style="margin-top: 0%">
-				<p><b>Takeaway 1.</b></p>
-			</div>
-			<div class="side-by-side" style="margin-top: 0%">
-				<p><b>Takeaway 2.</b></p>
-			</div>
-			<div class="side-by-side" style="margin-top: 0%">
-				<p><b>Takeaway 3.</b></p>
-			</div>
-		</div>
 	</div>
 
 	<div class="container">
@@ -186,7 +175,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Households are increasing despite overall population decline.</h3>
+				<h3>Much of Honolulu's projected household growth is projected to be concentrated at higher incomes.</h3>
 				<h5>While the number of people in Honolulu County has been declining, the number of households continues to grow.</h5>
 			</div>
 		</div>
@@ -194,11 +183,11 @@
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Multiple Lines" id="datawrapper-chart-6miWV" src="https://datawrapper.dwcdn.net/6miWV/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="300" data-external="1"></iframe>
-				<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();</script>
+				<iframe title="" aria-label="Interactive area chart" id="datawrapper-chart-w85On" src="https://datawrapper.dwcdn.net/w85On/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="389" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Though Honolulu County’s population is expected to decline over the next several years, the number of households will continue increasing, driving ongoing need for more housing units across the region. The phenomenon of declining population combined with growing household counts and increased housing demand is not unique to Honolulu County.
+				<p>Honolulu’s household population has grown modestly since 2010. In terms of relative income levels, most of the growth has been concentrated among households earning >140% AMI. Looking forward, the fastest growing household income group is >140% AMI, followed by the 80-100% AMI group. The ratio of households below 60% has been decreasing since 2013 and will not result in net new households if trends continue. However, households at lower levels of AMI are cost burdened, and new affordable housing would address that need.					.
 				</p>
 			</div>
 		</div>
