lots in indicators, through affordability chart

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Much of Honolulu's projected household growth is projected to be concentrated at higher incomes.</h3>
-				<h5>While the number of people in Honolulu County has been declining, the number of households continues to grow.</h5>
+				<h5>Honolulu is projected to add roughly 11,250 households over the next five years.</h5>
 			</div>
 		</div>
 
@@ -197,22 +197,17 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h5>As households get smaller and demographics change, fewer people belong to more households.</h5>
+				<h5>Here's a table showing that same information.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/HHup.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
+				<p>Table</p>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Many parts of the country are experiencing similar trends which are driven by two simultaneous factors: 1) larger families have fragmented into multiple households as children grow up and move out to form their own households. 2) household size is shrinking as seniors increasing live as empty nester couples or singles and their adult children have fewer children of their own.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="nine columns" style="margin-top: 0%">
-				<p>In this way, a family of four can transition into multiple smaller households that require multiple housing units despite not representing additional individuals. In the event someone from the original family passes away or moves out of the region, the population can shrink along the way.</p>
+				<p>Here's some information about that table.</p>
 			</div>
 		</div>
 	</div>
@@ -220,20 +215,19 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>There is a shortage of affordable housing units.</h3>
-				<h5>There are more low-income households than low-cost units available, leading many to pay more than they can afford.</h5>
+				<h3>Households are cost-burdened at all income levels but especially at lower incomes.</h3>
+				<h5>In Honolulu, most low-income households are cost burdened. Cost burden is also prevalent at higher incomes, but it does not represent the majority of households earning over 60% AMI.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Column Chart" id="datawrapper-chart-QOmKg" src="https://datawrapper.dwcdn.net/QOmKg/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500" data-external="1"></iframe>
+				<iframe title="" aria-label="Stacked Bars" id="datawrapper-chart-JRpJu" src="https://datawrapper.dwcdn.net/JRpJu/1/" scrolling="no" frameborder="0" style="border: none;" width="700" height="294" data-external="1"></iframe>
 				<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>The housing study observed significant shortages of affordable housing across Honolulu County. There are not enough units priced at levels affordable to low-income and low-income households. On the other hand, there are more than enough units affordable to moderate-income and middle-income households. However, this misalignment between incomes and housing prices creates competition for the limited units available such that, in practice, most lower- and middle-income households likely feel the supply does not meet demand overall.
-
+				<p>Households are cost burdened when paying more than 30% of their income on housing costs. They are considered severely cost burdened when these costs exceed 50% of their income. For renters, this includes lease rent and utilities. For homeowners, this includes mortgage costs, property taxes, insurance, utilities, and any condo fees. 
 				</p>
 			</div>
 		</div>
@@ -242,20 +236,23 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>The housing vacancy rate is too low, driving up competition and prices</h3>
-				<h5>Honolulu County’s vacancy rate is 0.2% for rentals and 1.9% for ownership units. A health and sustainable vacancy rate is between 5-8% overall. Vacancy provides the “slack” in the market so there are always some units to move into when people need to.</h5>
+				<h3>Homeownership is increasingly out of reach.				</h3>
+				<h5>Median home prices for both single-family homes and condos are significantly higher than what a median income household can afford.</h5>
+				<p>The chart below compares typical home values with the price affordable to a household earning the median household income. A wider gap means higher barrier to entry for first-time homebuyers and increased risk of displacement for current homeowners.
+					A home is “affordable” if primary ownership costs total less than 30% of a household’s total monthly income. These costs include a range of factors such as: Mortgage interest rate, property tax rate, home insurance, private mortgage insurance, utilities, and condo fees.
+				</p>
 			</div>
 		</div>
 	</div>
 	<!-- Row with image and text -->
 	<div class="container">
 		<div class="four columns" style="margin-top: 2%; text-align: center;">
-			<p>
-				<img src="images/vacant.jpg" style="width:100%; max-width: 250px; min-width: 50px;">
-			</p>
+			<iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-wU2ly" src="https://datawrapper.dwcdn.net/wU2ly/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="359" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+			</script>
 		</div>
 		<div class="eight columns" style="margin-top: 2%">
-			<p>The housing study observed significant shortages of affordable housing across Honolulu County. There are not enough units priced at levels affordable to low-income and low-income households. On the other hand, there are more than enough units affordable to moderate-income and middle-income households. However, this misalignment between incomes and housing prices creates competition for the limited units available such that, in practice, most lower- and middle-income households likely feel the supply does not meet demand overall.</p>
+			<p>Affordability is based on the county’s estimated median income. Actual affordability levels for specific properties vary based on variation in the above variables as well as possible additional costs for some units such as condominium fees.
+			</p>
 		</div>
 	</div>
 	</div>
