switched columns for affordability grpah

--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
 	</div>
 	<!-- Row with image and text -->
 	<div class="container">
-		<div class="four columns" style="margin-top: 2%; text-align: center;">
+		<div class="eight columns" style="margin-top: 2%; text-align: center;">
 			<iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-wU2ly" src="https://datawrapper.dwcdn.net/wU2ly/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="359" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 			</script>
 		</div>
-		<div class="eight columns" style="margin-top: 2%">
+		<div class="four columns" style="margin-top: 2%">
 			<p>Affordability is based on the county’s estimated median income. Actual affordability levels for specific properties vary based on variation in the above variables as well as possible additional costs for some units such as condominium fees.
 			</p>
 		</div>
