getting into employment section

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Homeownership is increasingly out of reach.				</h3>
-				<h5>Median home prices for both single-family homes and condos are significantly higher than what a median income household can afford.</h5>
+				<h5>Median prices for both single-family homes and condos are significantly higher than what a median income household can afford.</h5>
 				<p>The chart below compares typical home values with the price affordable to a household earning the median household income. A wider gap means higher barrier to entry for first-time homebuyers and increased risk of displacement for current homeowners.
 					A home is “affordable” if primary ownership costs total less than 30% of a household’s total monthly income. These costs include a range of factors such as: Mortgage interest rate, property tax rate, home insurance, private mortgage insurance, utilities, and condo fees.
 				</p>
@@ -259,18 +259,35 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Attainable housing is increasingly out of reach for the typical local household.</h3>
+				<h3>Headline about housing needs of O'ahu's workforce</h3>
+				<h5>Subheader.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
+			<div class="four columns" style="margin-top: 2%">
+				<iframe title="" aria-label="Donut Chart" id="datawrapper-chart-zNr7P" src="https://datawrapper.dwcdn.net/zNr7P/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="528" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+				</script>
+			</div>
 			<div class="eight columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-yP1Gi" src="https://datawrapper.dwcdn.net/yP1Gi/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400" data-external="1"></iframe>
-				<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();</script>
+				<p>	Just over 1/3 (35%) of O'ahu's workforce is employed in warehousing or service sector jobs. Households with two earners with median-pay service/warehousing sector jobs might need housing affordable at 40-75% AMI levels.
+				</p>
+				<p>	11% of O'ahu jobs are "blue collar"; this includes jobs in manufacturing, construciton, or natural resources. A household with two blue-collar earners might have a household income between 50 and 100% AMI.  
+				</p>
+				<p>	31% of O'ahu jobs are in education, healthcare, or the public sector. Incomes within these sectors can vary: A household with two median-pay employees in "eds", "meds", or the public sector could need housing affordable at 50% AMI, or might be able to afford market-rate housing. 
+				</p>
+				<p>	22% of O'ahu jobs are in the "knowledge sector" - desk jobs in fields such as tech, finance, or professional services. A two-earner household of median-pay knowledge sector employees can typically afford housing at 110% AMI or above. 
+				</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="eight columns" style="margin-top: 2%">
+				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="998" height="348" data-external="1"></iframe>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Prior to the pandemic, homeownership was financially attainable to the average household in Honolulu County: until 2022, a household earning the area’s median income could generally afford the area’s median home price. However, as housing markets have tightened, prices increased, and interest rates risen, an affordability gap has emerged that continues to trend in the wrong direction. As of this summer, a household earning the median area income falls $200k short of being able to afford the current median home price.
+				<p>The essential workforce is typically within the 60-140% AMI range depending on whether there are one or two income earners in the household. According to IRS data, the average income of Oahu’s approx. 4,000 annual outmigrant households is between 65% and 130% AMI.
 				</p>
 			</div>
 		</div>
