list, deleted some placeholders

--- a/index.html
+++ b/index.html
@@ -102,63 +102,35 @@
 	</div>
 
 	<!-- Header row -->
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Honolulu is developing a county-wide housing plan.</h3>
-				<h5>Honolulu County communities are facing a housing shortage.</h5>
-			</div>
-		</div>
-
-		<!-- Row with image and text -->
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/map.jpg" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
-			</div>
-			<div class="four columns" style="margin-top: 2%">
-				<p>Honolulu has launched a planning process to understand the local housing landscape and develop strategies and solutions that help meet current and projected needs across income levels. As a first step, Honolulu commissioned a housing study to gauge housing supply and demand across the county. This summer, Honolulu begins extensive community engagement to share findings from the study and promote ideas and recommendations that can help Honolulu County communities expand the housing supply to better meet the needs of local residents.
-				</p>
-			</div>
-		</div>
-	</div>
 
 	<!-- Header row -->
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Top 3 housing goals for Honolulu County</h3>
-				<h5>Honolulu has set three guiding housing goals for Honolulu County which encompass the range of actions and strategies needed to address today’s and tomorrow’s key housing challenges. </h5>
+				<h3>The challenge</h3>
+				<h5>The shortage of affordable housing on O'ahu is a long-standing, complex issue that the city has faced for decades. </h5>
+				<p>The lack of housing impacts us as a community. Increasing the supply of housing for all income levels must be considered, as a continuum of need exists, ranging from homeless shelters and permanent supportive housing, to low-income rentals, workforce housing, and single-family homes and condos for those pursuing the American dream of homeownership.</p>
 			</div>
 		</div>
-
-		<!-- Row three call outs -->
-		<div class="cover">
-			<div class="unresponsive">
-				<div class="side-by-side" style="margin-top: 0%">
-					<p><img src="images/preserve.png" style="width:50%; max-width: 80px; min-width: 50px;"></p>
-					<p><b>Preserve existing housing.</b></p>
-				</div>
-				<div class="side-by-side" style="margin-top: 0%">
-					<p><img src="images/affordable.png" style="width:50%; max-width: 80px; min-width: 50px;"></p>
-					<p><b>Preserve existing affordability of housing.</b></p>
-				</div>
-				<div class="side-by-side" style="margin-top: 0%">
-					<p><img src="images/new.png" style="width:50%; max-width: 80px; min-width: 50px;"></p>
-					<p><b>Create new housing.</b></p>
-				</div>
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>The purpose of this plan</h3>
+				<h5>This document builds on the the Office of Housing’s 2023 Housing Plan with extensive data analysis, stakeholder engagement, policy review, and actionable recommendations to help the City and County of Honolulu achieve its housing goals through 2029 and beyond. </h5>
+				<p> This plan is intended to help stakeholders and residents understand the details and nuances of the city’s housing challenge, coordinating with other City departments and governing datasets and metrics to provide a strategic roadmap to unlock opportunities for expanded housing production across the spectrum of affordability - and especially among income levels that have been underserved by current policies and market activity.
+				</p>
 			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div class="nine columns" style="margin-top: 2%">
-				<p>Honolulu will implement the housing plan in several ways, including:</p>
+				<p>This plan supports Honolulu's efforts to address its housing needs by ...:</p>
 				<ul>
-					<li>Engaging with community stakeholders, leaders, and residents on housing issues, opportunities, and solutions.</li>
-					<li>Providing technical assistance and resources to communities interested in developing new housing and related policies.</li>
-					<li>Tracking progress toward meeting housing goals over time and updating the plan and its analysis periodically to keep the community informed.</li>
+					<li>list1, analyzing projected household growth and the needs of growing household types.</li>
+					<li>list2, assessing housing cost burden of Honolulu's existing population and the housing types needed to reduce housing cost burden across a spectrum of incomes, including for middle-income essential workers.</li>
+					<li>list3, evaluating how Honolulu's existing pipeline of projects, policies, funding sources, ... can help Honolulu work towards its housing production goals and address housing cost burden, accomodate growth, and reduce cost-motivated outmigration of essential workers.</li>
+					<li>list4, identifying additional strategies to meet those goals.</li>
 				</ul>
-
 			</div>
 		</div>
 	</div>
