added map to solutions section

--- a/index.html
+++ b/index.html
@@ -321,8 +321,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>There is no one-size-fits-all solution to the housing challenge.</h3>
-				<h5>A variety of housing types and development models are needed - here are a few examples.</h5>
+				<h3>Capacity map headline.</h3>
+				<h5>Does this map work does it look ok.</h5>
+				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/atlas/index.html?appid=4d180a24d49046a6931eec6e03d225d1" width="400" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 			</div>
 		</div>
 
