switching out map type from atlas to basic

--- a/index.html
+++ b/index.html
@@ -323,8 +323,7 @@
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Capacity map headline.</h3>
 				<h5>Does this map work does it look ok.</h5>
-				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/atlas/index.html?appid=4d180a24d49046a6931eec6e03d225d1" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>		</div>
-
+				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/interactivelegend/index.html?appid=e5524c0984304be1bdb4ebda345cef84" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
