added list from jeff, probably delete list below

--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
 				</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<h5> The Comprehensive Housing Plan builds on the foundational goals and priorities established in the 2023 plan by: </h5>
+				<ul>
+					<li>Projecting household growth and housing demand to help target strategies toward the unit types and income levels where need is increasing fastest.</li>
+					<li>Engaging key stakeholders across disciplines and perspectives to learn from practitioners, test ideas, foster collaboration, and build consensus around promising strategies.</li>
+					<li>Evaluating current and proposed housing policies to improve their effectiveness and impact toward achieving City goals.</li>
+					<li>Introducing new policy concepts and precedent examples from places comparable to Honolulu for City and stakeholder consideration.</li>
+					<li>Providing place-based recommendations to distribute new housing development most appropriately and efficiently across the island, with primary emphasis on TOD districts.</li>
+					<li>Documenting analyses, findings, and recommendations in report and online dashboard formats to help inform and advance the community's housing discourse.</li>
+				</ul>			
+			</div>
+		</div>
 	</div>
 	<div class="container">
 		<div class="row">
