--- a/index.html
+++ b/index.html
@@ -133,17 +133,14 @@
 				</ul>			
 			</div>
 		</div>
-	</div>
-	<div class="container">
 		<div class="row">
-			<div class="nine columns" style="margin-top: 2%">
-				<p>This plan supports Honolulu's efforts to address its housing needs by ...:</p>
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>Key takeaways</h3>
 				<ul>
-					<li>list1, analyzing projected household growth and the needs of growing household types.</li>
-					<li>list2, assessing housing cost burden of Honolulu's existing population and the housing types needed to reduce housing cost burden across a spectrum of incomes, including for middle-income essential workers.</li>
-					<li>list3, evaluating how Honolulu's existing pipeline of projects, policies, funding sources, ... can help Honolulu work towards its housing production goals and address housing cost burden, accomodate growth, and reduce cost-motivated outmigration of essential workers.</li>
-					<li>list4, identifying additional strategies to meet those goals.</li>
-				</ul>
+					<li>takeaway1</li>
+					<li>takeaway2</li>
+					<li>takeaway3</li>
+				</ul>			
 			</div>
 		</div>
 	</div>
