headers also buttons and key takeaways

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 		<div class="row">
 			<div class="nine columns" style="margin-top: 20px">
 				<p>This dashboard was created by <a href="http://communityscale.io">CommunityScale</a> for the <a href="https://Honolulu.org/project/housing-planning/">County & City of Honolulu</a>. The objective of this dashboard is to outline the plan's objectives and priorities, share key observations and findings about housing, and introduce possible solutions to increase housing production and address affordability challenges.</p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Full report</button></a></p>
+				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary</button></a></p>
 			</div>
 			<div class="one-half column" style="margin-top: 20px">
 
@@ -137,9 +139,9 @@
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Key takeaways</h3>
 				<ul>
-					<li>takeaway1</li>
-					<li>takeaway2</li>
-					<li>takeaway3</li>
+					<li>Business-as-usual housing development isn't meeting the needs of Honolulu's existing and growing populations, leading to outmigration of O'ahu's essential workforce.</li>
+					<li>Policy changes are needed to expand housing attainability for households at all income levels.</li>
+					<li>Housing development should be prioritized within and around TOD areas, with more limited, context-appropriate infill in outlying areas.</li>
 				</ul>			
 			</div>
 		</div>
@@ -149,7 +151,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Indicators" class="inline-text"><img src="images/Place.png" class="inline-image" title="Indicators">Indicators</h2>
+				<h2 id="Indicators" class="inline-text"><img src="images/Place.png" class="inline-image" title="Indicators">Business-as-usual housing development isn't meeting the needs of Honolulu's existing and growing populations</h2>
 			</div>
 		</div>
 	</div>
@@ -323,7 +325,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Solutions" class="inline-text"><img src="images/Results.png" class="inline-image" title="Solutions">Solutions</h2>
+				<h2 id="Solutions" class="inline-text"><img src="images/Results.png" class="inline-image" title="Solutions">Policy changes are needed to expand housing attainability for households at all income levels.</h2>
 			</div>
 		</div>
 	</div>
@@ -411,7 +413,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Next steps" class="inline-text"><img src="images/Demand.png" class="inline-image" title="Next steps">Next steps</h2>
+				<h2 id="Next steps" class="inline-text"><img src="images/Demand.png" class="inline-image" title="Next steps">Housing development should be prioritized within and around TOD areas, with more limited, context-appropriate infill in outlying areas.</h2>
 			</div>
 		</div>
 	</div>
