--- a/index.html
+++ b/index.html
@@ -244,29 +244,23 @@
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Headline about housing needs of O'ahu's workforce</h3>
-				<h5>Subheader.</h5>
+				<h5>jobs are everywhere, job access is important, with some types of jobs more clustered than others.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
-			<div class="four columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Donut Chart" id="datawrapper-chart-zNr7P" src="https://datawrapper.dwcdn.net/zNr7P/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="528" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-				</script>
-			</div>
 			<div class="eight columns" style="margin-top: 2%">
-				<p>	Just over 1/3 (35%) of O'ahu's workforce is employed in warehousing or service sector jobs. Households with two earners with median-pay service/warehousing sector jobs might need housing affordable at 40-75% AMI levels.
-				</p>
-				<p>	11% of O'ahu jobs are "blue collar"; this includes jobs in manufacturing, construciton, or natural resources. A household with two blue-collar earners might have a household income between 50 and 100% AMI.  
-				</p>
-				<p>	31% of O'ahu jobs are in education, healthcare, or the public sector. Incomes within these sectors can vary: A household with two median-pay employees in "eds", "meds", or the public sector could need housing affordable at 50% AMI, or might be able to afford market-rate housing. 
-				</p>
-				<p>	22% of O'ahu jobs are in the "knowledge sector" - desk jobs in fields such as tech, finance, or professional services. A two-earner household of median-pay knowledge sector employees can typically afford housing at 110% AMI or above. 
+				<p><img src="./images/honjobsfordash.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
+			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p>Caption.
 				</p>
 			</div>
 		</div>
 
 		<div class="row">
+			<h5>Oahu's essential workforce has unmet housing needs - risk of losing</h5>
 			<div class="eight columns" style="margin-top: 2%">
 				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="998" height="348" data-external="1"></iframe>
 			</div>
