--- a/index.html
+++ b/index.html
@@ -244,18 +244,19 @@
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Headline about housing needs of O'ahu's workforce</h3>
-				<h5>jobs are everywhere, job access is important, with some types of jobs more clustered than others.</h5>
+				<h5>Jobs are everywhere, job access is important, with some types of jobs more clustered than others.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
+			<div class="twelve columns" style="margin-top: 2%">
 				<p><img src="./images/honjobsfordash.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
 			</div>
-			<div class="four columns" style="margin-top: 2%">
-				<p>Caption.
-				</p>
+		</div>
+				<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<p>Caption about the maps.</p>
 			</div>
 		</div>
 
@@ -271,12 +272,6 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Our population is aging - and this means new housing needs.</h3>
-			</div>
-		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
